--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12">&copy; 2013 Kevin Howell. Powered by Jekyll and GitHub pages.</div>
+            <div class="col-xs-12">&copy; 2013 Kevin Howell. Powered by Jekyll and GitHub Pages.</div>
         </div>
     </body>
 </html>
