Tweak layout a little

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,53 +34,55 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-md-8">
-                {{ content }}
-                </div>
-                <div class="col-md-4">
-                    <div class="col-md-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4><span class="glyphicon glyphicon-pencil"></span> About the Author</h4>
-                            </div>
-                            <div class="panel-body">
-                                <img id="gravatar" class="pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
-                                Kevin Howell<br>
-                                Software Developer<br>
-                                kevin@kahowell.net
-                            </div>
+            <div class="col-xs-12 col-md-8">
+            {{ content }}
+            </div>
+            <div class="col-md-4">
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4><span class="glyphicon glyphicon-pencil"></span> About the Author</h4>
+                        </div>
+                        <div class="panel-body">
+                            <img id="gravatar" class="pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
+                            Kevin Howell<br>
+                            Software Developer<br>
+                            kevin@kahowell.net
                         </div>
                     </div>
-                    <div class="col-md-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4><span class="glyphicon glyphicon-globe"></span> Around the Web</h4>
-                            </div>
-                            <div class="panel-body">
-                                <a href="https://github.com/kahowell">github.com/kahowell</a><br />
-                                <a href="https://twitter.com/kevin_a_howell">twitter.com/kevin_a_howell</a><br />
-                                <a href="http://stackoverflow.com/users/1881136/kahowell">stackoverflow profile</a>
-                            </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4><span class="glyphicon glyphicon-globe"></span> Around the Web</h4>
+                        </div>
+                        <div class="panel-body">
+                            <a href="https://github.com/kahowell">github.com/kahowell</a><br />
+                            <a href="https://twitter.com/kevin_a_howell">twitter.com/kevin_a_howell</a><br />
+                            <a href="http://stackoverflow.com/users/1881136/kahowell">stackoverflow profile</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><span class="glyphicon glyphicon-warning-sign"></span> Disclaimer</h4>
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4><span class="glyphicon glyphicon-warning-sign"></span> Disclaimer</h4>
+                        </div>
+                        <div class="panel-body">
+                            The views expressed here are not those of, and
+                            are not endorsed by, any of my employers -
+                            past, present, or future, or of any
+                            individuals or organizations I am associated
+                            with.
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        The views expressed here are not those of, and
-                        are not endorsed by, any of my employers -
-                        past, present, or future, or of any
-                        individuals or organizations I am associated
-                        with.
-                    </div>
+                    <div class="col-xs-12">&copy; 2013 Kevin Howell. Powered by Jekyll and GitHub Pages.</div>
                 </div>
             </div>
-            <div class="col-xs-12">&copy; 2013 Kevin Howell. Powered by Jekyll and GitHub Pages.</div>
         </div>
     </body>
 </html>
