--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,6 @@
           <script src="/js/html5shiv.js"></script>
           <script src="/js/response.min.js"></script>
         <![endif]-->
-        <style>
-        #gravatar {
-            border-radius: 4px;
-        }
-        </style>
     </head>
     <body>
         <nav class="navbar navbar-default" role="navigation">
@@ -44,7 +39,7 @@
                             <h4><span class="glyphicon glyphicon-pencil"></span> About the Author</h4>
                         </div>
                         <div class="panel-body">
-                            <img id="gravatar" class="pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
+                            <img class="img-rounded pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
                             Kevin Howell<br>
                             Software Developer<br>
                             kevin@kahowell.net
