--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
                         <div class="panel-body">
                             <img class="img-rounded pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
                             Kevin Howell<br>
-                            Software Developer<br>
+                            Software Engineer<br>
                             kevin@kahowell.net
                         </div>
                     </div>
