Use https for gravatar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
                             <h4><span class="glyphicon glyphicon-pencil"></span> About the Author</h4>
                         </div>
                         <div class="panel-body">
-                            <img class="img-rounded pull-right" src="http://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
+                            <img class="img-rounded pull-right" src="https://www.gravatar.com/avatar/0a1cca744d3e02c9e927cdb74210716c.png" alt="Kevin's Gravatar" />
                             Kevin Howell<br>
                             Software Engineer<br>
                             kevin@kahowell.net
