Replace twitter link w/ mastodon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
                             </a>
                         </li>
                         <li class="ms-3">
-                            <a class="link-dark" href="https://twitter.com/kevin_a_howell">
-                                <img src="/icons/twitter.svg" alt="Twitter icon" width="24" height="24">
+                            <a class="link-dark" rel="me" href="https://mastodon.social/@kahowell">
+                                <img src="/icons/mastodon.svg" alt="Mastodon icon" width="24" height="24">
                             </a>
                         </li>
                     </ul>
