Drop copyright date

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <footer >
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
                     <p>
-                        &copy; 2022 Kevin Howell. Opinions are my own and not the views of my employer.
+                        &copy; Kevin Howell. Opinions are my own and not the views of my employer.
                     </p>
                     <ul class="list-unstyled d-flex">
                         <li class="ms-3">
